# horizon5-router

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  makefile  manage.py  pyproject.toml
.cursor/commands/: do_coding_review.md
apps/core/: apps.py  consumers.py  exceptions.py  pagination.py  routing.py  urls.py  utils.py  views.py
apps/core/controllers/: base.py
apps/core/controllers/backtest/: __init__.py
apps/core/controllers/backtest/schemas/: post.py  put.py
apps/core/controllers/orders/: __init__.py
apps/core/controllers/orders/schemas/: delete.py  get.py  post.py  put.py
apps/core/controllers/report/: __init__.py
apps/core/controllers/report/schemas/: get.py
apps/core/controllers/report_performance/: __init__.py
apps/core/controllers/report_performance/schemas/: get.py
apps/core/controllers/report_returns/: __init__.py
apps/core/controllers/report_returns/schemas/: get.py
apps/core/controllers/snapshot/: __init__.py
apps/core/helpers/: get_slug.py
apps/core/interfaces/: repository.py
apps/core/management/commands/: seed_backtest.py
apps/core/models/: backtest.py  base.py  order.py  report.py  report_performance.py  report_returns.py  snapshot.py
apps/core/repositories/: backtest.py  base.py  order.py  report.py
apps/core/schemas/: pagination.py
apps/core/services/logging/: __init__.py
apps/core/services/mongodb/: __init__.py
apps/core/tasks/: __init__.py  hello_world.py  process_backtest.py
config/: asgi.py  celery.py  routing.py  urls.py
config/settings/: base.py  development.py  production.py
docs/releases/: v0.1.0.md
docs/releases/clean-code/: class-organization.md  code-smells.md  no-comments.md  typings.md  variable-name-convention.md
tests/e2e/: test_order.py
